ft_containers-unit-test/logs.txt
In file included from ../map_tests/operator >=.cpp:2:
In file included from ../map_tests/__service.ipp:3:
In file included from ../map_tests/../../../map.hpp:3:
../map_tests/../../../map_iterator.hpp:64:62: error: binding value of type 'const pair<...>' to reference to type 'pair<...>' drops 'const' qualifier
                        value_type& operator* () const                    {return _ptr->key;}
                                                                                  ^~~~~~~~~
../map_tests/../../../equal.hpp:30:25: note: in instantiation of member function 'ft::map_iterator<ft::pair<const int, int>, const ft::Node<ft::pair<const int, int> > >::operator*' requested here
                        if (first2==last2 || *first2<*first1)
                                             ^
../map_tests/../../../map.hpp:261:16: note: in instantiation of function template specialization 'ft::lexicographical_compare<ft::map_iterator<ft::pair<const int, int>, const ft::Node<ft::pair<const int, int> > >, ft::map_iterator<ft::pair<const int, int>, const ft::Node<ft::pair<const int, int> > > >' requested here
                return !(ft::lexicographical_compare(x.begin(), x.end(), y.begin(), y.end()));
                             ^
../map_tests/operator >=.cpp:19:27: note: in instantiation of function template specialization 'ft::operator>=<int, int, std::__1::less<int>, std::__1::allocator<ft::pair<const int, int> > >' requested here
        result2.push_back(mt.mp1 >= mt.mp1); result2.push_back(mt.mp3 >= mt.mp3); result2.push_back(mt.mp5 >= mt.mp9);
                                 ^
In file included from ../map_tests/operator >=.cpp:2:
In file included from ../map_tests/__service.ipp:3:
In file included from ../map_tests/../../../map.hpp:3:
../map_tests/../../../map_iterator.hpp:64:62: error: binding value of type 'const pair<...>' to reference to type 'pair<...>' drops 'const' qualifier
                        value_type& operator* () const                    {return _ptr->key;}
                                                                                  ^~~~~~~~~
../map_tests/../../../equal.hpp:30:25: note: in instantiation of member function 'ft::map_iterator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> >, const ft::Node<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >::operator*' requested here
                        if (first2==last2 || *first2<*first1)
                                             ^
../map_tests/../../../map.hpp:261:16: note: in instantiation of function template specialization 'ft::lexicographical_compare<ft::map_iterator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> >, const ft::Node<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >, ft::map_iterator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> >, const ft::Node<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > > >' requested here
                return !(ft::lexicographical_compare(x.begin(), x.end(), y.begin(), y.end()));
                             ^
../map_tests/operator >=.cpp:19:101: note: in instantiation of function template specialization 'ft::operator>=<std::__1::basic_string<char>, std::__1::basic_string<char>, std::__1::less<std::__1::basic_string<char> >, std::__1::allocator<ft::pair<const std::__1::basic_string<char>, std::__1::basic_string<char> > > >' requested here
        result2.push_back(mt.mp1 >= mt.mp1); result2.push_back(mt.mp3 >= mt.mp3); result2.push_back(mt.mp5 >= mt.mp9);
                                                                                                           ^
2 errors generated.
  ^
2 errors generated.
